--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Screen-Numbers",
+  "name": "Renumber",
   "version": "1.0.0",
   "description": "Your Figma Plugin",
   "main": "code.js",
